# bdpl

./: .gitignore  AGENTS.md  CONTRIBUTING.md  PLAN.md  README.md  pyproject.toml
.github/instructions/: README.md  pytest.instructions.md  python.instructions.md
.github/skills/add-disc-fixture/: SKILL.md
.github/workflows/: python-app.yml
bdpl/: __init__.py  cli.py  model.py
bdpl/analyze/: __init__.py  classify.py  clustering.py  explain.py  ordering.py  segment_graph.py  signatures.py
bdpl/bdmv/: __init__.py  clpi.py  ig_stream.py  index_bdmv.py  movieobject_bdmv.py  mpls.py  reader.py
bdpl/export/: __init__.py  digital_archive.py  json_out.py  m3u.py  mkv_chapters.py  text_report.py
bdpl/remux/: __init__.py
bdpl/util/: __init__.py
tests/: builders.py  conftest.py  test_chapter_split.py  test_cli.py  test_clpi_parse.py  test_digital_archive.py  test_disc10_scan.py  test_disc11_scan.py  test_disc12_scan.py  test_disc13_scan.py  test_disc14_scan.py  test_disc15_scan.py  test_disc16_scan.py  test_disc17_scan.py  test_disc18_scan.py  test_disc19_scan.py  test_disc1_scan.py  test_disc20_scan.py  test_disc21_scan.py  test_disc22_scan.py  test_disc23_scan.py  test_disc24_scan.py  test_disc25_scan.py  test_disc26_scan.py  test_disc27_scan.py  test_disc28_scan.py  test_disc29_scan.py  test_disc2_scan.py  test_disc3_scan.py  test_disc4_scan.py  test_disc5_scan.py  test_disc6_scan.py  test_disc7_scan.py  test_disc8_scan.py  test_disc9_scan.py  test_disc_matrix.py  test_fixture_integrity.py  test_ig_stream.py  test_index_bdmv.py  test_movieobject_bdmv.py  (+6 more)
(+506 files in other folders)
