[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bdpl"
version = "0.1.0"
description = "Blu-ray disc playlist analyzer – identify episodes, map segments, remux"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "typer>=0.9",
    "rich>=13.0",
]

[project.scripts]
bdpl = "bdpl.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "ruff>=0.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # pycodestyle, Pyflakes, pycodestyle warnings, isort-style imports

[tool.ruff.format]
quote-style = "double"
indent-width = 4
